--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "formidable": "^1.1.1",
+    "handlebars": "^4.0.11",
     "mongoose": "^4.13.9",
     "morgan": "~1.9.0",
     "normalize.css": "^7.0.0",
